kubernetes/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
spec:
  ports:
    - port: 8384
      name: http
  selector:
    app: syncthing
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-sync
spec:
  selector:
    app: syncthing
  ports:
    - port: 22000
      name: sync
  externalIPs:
  - 10.11.3.137
  - 10.11.0.37
